--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                             }
 
             // 디버그용. 로컬스토리지의 변수들 리셋.
-            var CartinItem=[]
-            localStorage.setItem("ItemCartIn",JSON.stringify(CartinItem));
-            var cartcount=0;
-            localStorage.setItem("cartcount",cartcount);
+//             var CartinItem=[]
+//             localStorage.setItem("ItemCartIn",JSON.stringify(CartinItem));
+//             var cartcount=0;
+//             localStorage.setItem("cartcount",cartcount);
 
             
         </script>
